# CYD_3.5inch_HUD_NMEA

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
cyd_hud_3.5inch_eezstudio/: cyd_hud_3.5inch_eezstudio.eez-project  cyd_hud_3.5inch_eezstudio.eez-project-ui-state
cyd_hud_3.5inch_eezstudio/src/ui/: .eez-project-build
main/: CMakeLists.txt  copy_ui.bat  gps_nmea.c  gps_nmea.h  gps_rtc.c  gps_rtc.h  gps_sim_gui.py  idf_component.yml  main.c
main/ui/: .eez-project-build  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  ui.c  ui_font_braille30.c  ui_font_font_awesome_icon_40.c  ui_font_jb150.c  ui_font_jb30.c  ui_font_jb60.c  ui_font_jb61.c  ui_font_jb_130.c  ui_font_jb_30.c  ui_image_no_signal_48px.c  ui_image_satlite_white_40px.c  ui_image_signal_ex_48px.c  ui_image_signal_good_48px.c  ui_image_signal_moderate_48px.c  ui_image_signal_poor_48px.c  ui_image_sync_48px.c
